2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* effect.cpp: Add a null check. Fixes a crash with #XamlReflection.27 and
	#XamlReflection.28.

2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp: Give an error ptr to xaml_set_property_from_str. Fixes a crash
	with #XamlReflection.8.

2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* eventargs.cpp: MouseEventArgs ctors: add null checks. Fixes a crash ith
	#XamlReflection.2.

2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* application.cpp: Make gdb's life easier by not having multiple
	c (even static) methods with the same name.

2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: RemoveAllHandlers: remove handlers for all events, not
	just almost all events.

	* application.cpp: Go back to RemoveAllHandlers, since the bug there is now
	fixed.

2010-07-14  Jeffrey Stedfast  <fejj@novell.com>

	* tilesource.cpp (InvalidateTileLayer): Instead of calling a
	callback function, emit an event.

2010-07-14  Jeffrey Stedfast  <fejj@novell.com>

	Fixes toward getting drt 2004 to work (and likely a number of
	others).

	* deepzoomimagetilesource.cpp: Replace custom callback solution
	with events. This is needed in case the same DZITS is the source
	for multiple MSI's.
	(element_start): More bitmask fixes.

	* multiscaleimage.cpp: Remove DZITS callbacks (now event handlers)
	when the source gets replaced and immediately add new event
	handlers to the new source when it gets set. Same for subimage
	sources.

	* bitmapimage.cpp (CleanupLoader): Close the loader before
	deleting it so gtk doesn't freak out.
	(UriSourceChanged): In case of failure, we don't need to call
	DownloaderFailed because our resource_notify() callback should do
	that for us.

	* application.cpp (GetResource): If a notify_cb is provided,
	always call it with NotifyFailed before returning failure. This
	way BitmapImage doesn't emit failures events twice for the same
	failure.
