@@ -1,3 +1,7 @@
+2010-07-15  Alan McGovern  <amcgovern@novell.com>
+
+	* fontmanager.cpp: Fixes a crasher regression in 962
+
 2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* effect.cpp: Add a null check. Fixes a crash with #XamlReflection.27 and
